--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "boxicons": "^2.1.4",
+    "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
